# PyTorchLightning-Template

./: .gitignore  DataModule.py  DataPreprocessing.py  DeployModel.py  MetricsLosses.py  ModelDeploy.py  ModuleData.py  ModuleNet.py  MyNetwrok.py  NetModule.py  Network.py  PredictionRun.py  PredictionVal.py  PreprocessData.py  README.md  TrainerFit.py  TrainerFitKFold.py  _test.py  config.toml  load_validation_results.py  pyproject.toml  requirements.txt
Utils/: DataAugmentation.py  check_CoreML_ops.py  deploy_onnxmodel.py  enc_onnxmodel.py  network_modules.py  resize_right.py  training.py  utils.py
docs/: README.md  SUMMARY.md  api.md  developer_guide.md  user_guide.md
logs/myBackboneNet/version_0/: events.out.tfevents.1661556735.CEIYUKUN.9572.0
logs/myBackboneNet/version_1/: events.out.tfevents.1661557031.CEIYUKUN.50520.0
logs/myBackboneNet/version_2/: events.out.tfevents.1661557360.CEIYUKUN.48708.0  hparams.yaml
losses/: soft_bce.py  soft_ce.py
modelVisualization/: __init__.py  visualizeModel.py
myBackboneNets/: __init__.py  nets.py
myBackboneNets/unet/: base.py  model.py
