[project]
name = "pytorchlightning-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lightning>=2.5.5",
    "matplotlib>=3.10.7",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "torchvision>=0.24.0",
]
