[project]
name = "pytorchlightning-template"
version = "0.1.0"
description = "A clean, config-driven PyTorch Lightning template for image segmentation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lightning>=2.5.5",
    "torchvision>=0.24.0",
    "torchmetrics>=1.4.0",
    "segmentation-models-pytorch",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "scipy>=1.15.3",
    "natsort>=8.4.0",
    "matplotlib>=3.10.7",
    "tensorboard>=2.20.0",
    "torchinfo>=1.8.0",
    "tqdm>=4.66.0",
    "toml>=0.10.2 ; python_version < '3.11'",
    "onnx>=1.19.1",
    "onnxruntime-gpu>=1.23.2",
    "onnxscript>=0.5.6",
]

[tool.uv.sources]
segmentation-models-pytorch = { git = "https://github.com/qubvel-org/segmentation_models.pytorch" }
